Get cookies for mail.ru

--- a/settings.example.ini
+++ b/settings.example.ini
@@ -1,3 +1,9 @@
 [vk]
 user_email = your@email.here
 user_password = password here
+site = vk
+
+[mr]
+user_email = your@email.here
+user_password = password here
+site = mr
