--- a/src/settings.ini
+++ b/src/settings.ini
@@ -3,7 +3,7 @@ ignore_errors = true
 log_all = false
 default_user = -1
 
-[vlada]
+[user]
 setting_view = {'pickup':False,'location_send':False}
 seed_item = {'isle_sand':'P_24','other':'P_27'}
 cook_item = {RECIPE_53,RECIPE_51}
